add sendNative hidden command make "Hints.makeMigemoRegExp" a method add hint text from node.title fix only execute "call" in top window add nativeMessaging

--- a/manifest.json
+++ b/manifest.json
@@ -66,6 +66,7 @@
     "downloads.shelf",
     "clipboardRead",
     "clipboardWrite",
+    "nativeMessaging",
     "webNavigation"
   ],
   "background": {
